--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
+    "nodemailer-sendgrid": "^1.0.3",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
