--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@pdftron/pdfjs-express-viewer": "^8.7.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "nodemailer": "^6.9.1",
