--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,17 @@
 {
-    "rewrites": [
-      { "source": "/", "destination": "/auth/login" }
+    "version": 2,
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
-  }
+}
   
   
