--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "se2",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,8 +29,8 @@
     "nodemailer": "^6.9.1",
     "nodemailer-sendgrid": "^1.0.3",
     "sequelize": "^6.28.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+  }//,
+  // "devDependencies": {
+  //   "nodemon": "^2.0.20"
+  // }
 }
