--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "nodemailer": "^6.9.1",
     "nodemailer-sendgrid": "^1.0.3",
     "sequelize": "^6.28.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
