--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "se2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js", "type": "commonjs",
   "engines": {
     "node": "14.x"
   },
